[metadata]
name = ctc_heatpump
version = 0.0.1
author = David Björkevik
author_email = david@bjorkevik.se
description = For communicating with CTC heat pump by pretending to be a GSM modem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjorkegeek/python_ctc_heatpump
project_urls =
    Bug Tracker = https://github.com/bjorkegeek/python_ctc_heatpump/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    aioserial

[options.packages.find]
where = src